--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&display=swap');
+
+:root {
+  --font-family: 'Cinzel', serif;
+}
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+  cursor: pointer;
+
+}
+
+a {
+  text-decoration: none;
+  color: #909096;
+}
+/* .header {
+  height: calc(100vh - 85px);
+  background-color: red;
+} */
+.big-text {
+  font-family: var(--font-family);
+}
+.nav-logo {
+  width: 102.87 ;
+  height: 69.41 ;
+}
