--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,9 +5,11 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 :root {
   --font-family: 'Cinzel', serif;
+  --font-text: 'Inter', sans-serif;
 }
 
 * {
@@ -21,11 +23,30 @@
   cursor: pointer;
 
 }
+.App {
+  max-width: 2500px;
+  margin: 0 auto;
+}
 
 a {
   text-decoration: none;
   color: #909096;
 }
+h1 {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 160px;
+  line-height: 195px;
+  text-transform: uppercase;
+}
+h4 {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: var(--font-text);
+  color: #FFFFFF;
+}
+
 /* .header {
   height: calc(100vh - 85px);
   background-color: red;
