--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -273,7 +273,7 @@ button {
   background-color:  #8CB9B4;
 }
 .button__overlay {
-  background-color: white;
+  background-color: #f5f0ec;
   position: relative;
   top: 60px;
   left: 5px;
@@ -320,7 +320,7 @@ button {
   line-height: 24px;
   color: #8CB9B4;
   border: 1px solid #8CB9B4;
-  background-color: white;
+  background-color: #f5f0ec;
   padding: 10px 20px;
   text-transform: capitalize;
 }
